# securedrop-builder

./: .gitattributes  .gitignore  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  bootstrap-sha256sums-buster.txt  bootstrap-sha256sums-buster.txt.asc  bootstrap-sha256sums-focal.txt  bootstrap-sha256sums-focal.txt.asc  bootstrap-sha256sums.txt  bootstrap-sha256sums.txt.asc  build-requirements-focal.txt  build-requirements.in  build-requirements.txt  project.json  pyproject.toml  requirements-buster.txt  requirements-focal.in  requirements-focal.txt  requirements.in  requirements.txt  sha256sums-buster.txt.asc  sha256sums-focal.txt  sha256sums-focal.txt.asc  sha256sums.txt  sha256sums.txt.asc  test-requirements.txt  wheelsurls.txt
.circleci/: config.yml
bootstrap/: Cython-0.29.22-cp37-cp37m-linux_x86_64.whl  Cython-0.29.22-cp39-cp39-linux_x86_64.whl  click-7.1.2-py2.py3-none-any.whl  importlib_metadata-3.7.0-py3-none-any.whl  packaging-20.9-py2.py3-none-any.whl  pep517-0.9.1-py2.py3-none-any.whl  pip_tools-6.0.1-py3-none-any.whl  pytest_runner-5.3.0-py3-none-any.whl  pytz-2021.1-py3-none-any.whl  setuptools-54.0.0-py3-none-any.whl  typing_extensions-3.7.4.3-py3-none-any.whl  zipp-3.4.1-py3-none-any.whl
bootstrap-buster/: pip-21.0.1-py3-none-any.whl
bootstrap-focal/: Cython-0.29.22-cp38-cp38-linux_x86_64.whl  build-0.3.0-py2.py3-none-any.whl  cffi-1.14.5-cp38-cp38-linux_x86_64.whl  click-8.0.1-py3-none-any.whl  packaging-20.9-py2.py3-none-any.whl  pep517-0.10.0-py2.py3-none-any.whl  pip-21.1.2-py3-none-any.whl  pip_tools-6.2.0-py3-none-any.whl  pycparser-2.20-py2.py3-none-any.whl  pyparsing-2.4.7-py2.py3-none-any.whl  pytest_runner-5.3.1-py3-none-any.whl  pytoml-0.1.21-py2.py3-none-any.whl  semantic_version-2.8.5-py2.py3-none-any.whl  setuptools-57.0.0-py3-none-any.whl  setuptools_rust-0.12.1-py3-none-any.whl  setuptools_scm-6.0.1-py3-none-any.whl  toml-0.10.2-py2.py3-none-any.whl  wheel-0.36.2-py2.py3-none-any.whl
devops/: Dockerfile  ci-sign-rpm
dockerfiles/: Dockerfile  Makefile  image_hash
localwheels-buster/: MarkupSafe-1.1.1-cp37-cp37m-linux_x86_64.whl  PyYAML-5.3.1-cp37-cp37m-linux_x86_64.whl  arrow-0.12.1-py2.py3-none-any.whl  chardet-3.0.4-py2.py3-none-any.whl  requests-2.20.0-py2.py3-none-any.whl  requests-2.22.0-py2.py3-none-any.whl  securedrop_sdk-0.0.13-py3-none-any.whl  securedrop_sdk-0.2.0-py3-none-any.whl  urllib3-1.25.10-py2.py3-none-any.whl
localwheels-focal/: Babel-2.9.1-py2.py3-none-any.whl  Flask-1.0.2-py2.py3-none-any.whl  Flask_Assets-0.12-py3-none-any.whl  Flask_Babel-0.11.2-py3-none-any.whl  Flask_SQLAlchemy-2.4.0-py2.py3-none-any.whl  Flask_WTF-0.14.2-py2.py3-none-any.whl  Jinja2-2.11.3-py2.py3-none-any.whl  Mako-1.0.7-py3-none-any.whl  MarkupSafe-1.1.1-cp38-cp38-linux_x86_64.whl  SQLAlchemy-1.3.3-cp38-cp38-linux_x86_64.whl  WTForms-2.1-py2.py3-none-any.whl  (+24 more)
pubkeys/: allie.pub  (+13 more)
tests/fixtures/: pyproject.toml  requirements.txt
workstation-bootstrap/: build-requirements.txt  pyproject.toml  requirements.in  requirements.txt  sha256sums.txt  sha256sums.txt.asc
workstation-bootstrap/wheels/: Cython-0.29.22-cp310-cp310-linux_x86_64.whl  Cython-0.29.33-cp311-cp311-linux_x86_64.whl  Cython-0.29.33-cp39-cp39-linux_x86_64.whl  build-0.3.0-py2.py3-none-any.whl  build-1.2.1-py3-none-any.whl  cython-0.29.33-cp311-cp311-linux_x86_64.whl  flit_core-3.9.0-py3-none-any.whl  packaging-24.1-py3-none-any.whl  packaging-25.0-py3-none-any.whl  pip-21.3.1-py3-none-any.whl  pip-24.1.2-py3-none-any.whl  pip-25.0-py3-none-any.whl  pip-25.2-py3-none-any.whl  pyproject_hooks-1.1.0-py3-none-any.whl  setuptools-70.3.0-py3-none-any.whl  setuptools-79.0.0-py3-none-any.whl  setuptools_scm-8.1.0-py3-none-any.whl  toml-0.10.2-py2.py3-none-any.whl  wheel-0.38.1-py3-none-any.whl
(+323 files in other folders)
