[tool.poetry]
name = "workstation-bootsrap"
version = "0.1.0"
description = "Requirements for building wheels"
authors = ["SecureDrop Team"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
build = "1.2.1"
wheel = "0.38.1"
pip = "24.1.2"
setuptools = "70.3.0"
setuptools-scm = "8.1.0"
pytest-runner = "5.3.0"
cython = "0.29.33"
flit-core = "3.9.0"
