[project]
name = "test"
requires-python = ">=3.9"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "SecureDrop Team", email = "securedrop@freedom.press"}
    ]
license = {text = "GPLv3+"}
dependencies = [
    "colorama >= 0.4.6",
    "cowsay >= 6.0",
    "beautifulsoup4 >= 4.12.2",
    "'FortUNE___.--.._python' == 1.0.3",
    ]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
